--- a/style.css
+++ b/style.css
@@ -131,3 +131,16 @@ h4 {
   text-align: center;
   color: #d90429;
 }
+
+#logs-container {
+  display: none; /* Initially hide the containers */
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 10px;
+  position: absolute;
+  justify-self: center;
+  width: 70%;
+  height: 70%;
+}
