--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.body {
+  background-color: #f0f0f0;
+  font-family: sans-serif;
+  margin: 0;
+}
+
 .container {
   display: flex;
 }
@@ -6,6 +12,7 @@
   width: 20%;
   padding: 10px;
   box-sizing: border-box;
+  border-right: dotted 2px #ccc;
 }
 
 .dropdowns {
@@ -24,6 +31,12 @@
 h4 {
   padding: 0px;
   height: 0px;
+  font-family: sans-serif;
+}
+h3 {
+  padding: 0px;
+  height: 0px;
+  font-family: sans-serif;
 }
 
 .text-elements p {
@@ -48,7 +61,7 @@ h4 {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   position: relative;
-  width: 70%; /* Adjust the width as needed */
+  width: 70%;
   max-width: 400px;
 }
 
@@ -64,7 +77,7 @@ h4 {
 }
 
 #submit-button {
-  background-color: #1976d2;
+  background-color: #5a189a;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -103,18 +116,20 @@ h4 {
   padding: 5px;
   margin: 10px;
   border: none;
-  background-color: #ccc;
+  background-color: #5a189a;
   width: 100px;
   border-radius: 5px;
+  color: white;
 }
 
 #print-button {
   padding: 5px;
   margin: 10px auto;
   border: none;
-  background-color: #ccc;
+  background-color: #5a189a;
   width: 100px;
   border-radius: 5px;
+  color: white;
 }
 
 .grid {
@@ -143,4 +158,26 @@ h4 {
   justify-self: center;
   width: 70%;
   height: 70%;
+}
+.header-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  padding: 10px;
+  height: 50px;
+  border-radius: 5px;
+}
+
+.item {
+  padding: 5px;
+  text-align: center;
+  color: white;
+}
+
+.header {
+  grid-column: span 2; /* Span two columns for the header */
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  padding: 10px;
 }
