function to add new logs added

--- a/style.css
+++ b/style.css
@@ -149,15 +149,17 @@ h3 {
 
 #logs-container {
   display: none; /* Initially hide the containers */
-  background-color: #f0f0f0;
+  background-color: white;
   border: 1px solid #ccc;
-  padding: 20px;
+  padding-right: 40px;
   border-radius: 5px;
   margin: 10px;
   position: absolute;
   justify-self: center;
   width: 70%;
   height: 70%;
+  overflow: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .header-container {
   display: grid;
